trunk/Archive2/ac/6177bedef1716e/output
main.cpp:76:15: error: no matching member function for call to 'connect'
    delegate2.connect(m_testVector, &vector_type::insert);
    ~~~~~~~~~~^~~~~~~
main.cpp:26:10: note: candidate function [with Class = std::vector<int, std::allocator<int> >] not viable: no overload of 'insert' matching 'void (std::vector<int, std::allocator<int> >::*)(const __gnu_cxx::__normal_iterator<int *, std::vector<int, std::allocator<int> > >, int)' for 2nd argument
    void connect(Class& obj, void (Class::*func)(Params...)) {
         ^
1 error generated.
